--- a/stork-backend/src/main/resources/application.properties
+++ b/stork-backend/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.security.user.name=admin
+spring.security.user.password=admin
