--- a/stork-web/package.json
+++ b/stork-web/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0"
   },
   "devDependencies": {
